--- a/src/app/global/signup-popup/signup-popup.component.scss
+++ b/src/app/global/signup-popup/signup-popup.component.scss
@@ -13,6 +13,7 @@
         background: rgba($color-black, .9);
         max-width: 320px;
         padding: $space-large;
+        z-index: 1;
         
         &--show {
             opacity: 1;
