--- a/src/app/global/hero/hero.component.html
+++ b/src/app/global/hero/hero.component.html
@@ -41,19 +41,19 @@
   </div>
 
   <div data-aos="fade-in" data-aos-delay="200" data-aos-duration="3000" *ngIf="home">
-    <div class="h1">Branding for a better future</div>
+    <div class="h1">Branding a better future</div>
     
     <p class="hero__tagline">Beautiful & exceptional design for future-thinking tech startups</p>
 
     <div class="row" data-aos="fade-in" data-aos-delay="600" data-aos-duration="3000">
       <div class="col text-right">
         <div class="margin-top--lg">
-            <a [routerLink]="['/work']" class="hero__button btn btn--lg">See the work</a>
+            <a [routerLink]="['/work']" class="hero__button btn btn--lg btn--primary btn--primary-outline">See the work</a>
         </div>
       </div>
       <div class="col text-left">
         <div class="margin-top--lg">
-            <a [routerLink]="['/contact']" class="hero__button btn btn--lg btn--primary btn--primary-outline">Book a consultation</a>
+            <a [routerLink]="['/contact']" class="hero__button btn btn--lg">Book a consultation</a>
         </div>
       </div>
     </div>
