--- a/src/app/global/logo/logo.component.scss
+++ b/src/app/global/logo/logo.component.scss
@@ -8,6 +8,20 @@
     margin-top: 0;
     margin-bottom: 10px;
     font-family: 'KG-SummerStorm', Arial, sans-serif;
+
+    &--with-slogan {
+      margin-bottom: 0;
+    }
+  }
+  
+  &__slogan {
+    border-top: 1px solid $color-black;
+    border-bottom: 1px solid $color-black;
+    font-family: 'KG-SummerStorm', Arial, sans-serif;
+    display: inline-block;
+    padding: .2em 0;
+    font-size: 0.35em;
+    transform: translateY(-1em);
   }
 
   &__moon {
