--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,16 +6,12 @@
     <div class="home__tagline-wrapper">
       <p class="home__tagline" data-aos="fade-in" data-aos-duration="1000">
         <em class="hidden-md-up home__tagline-border">
-          <span class="home__tagline-break">We are a brand strategy and design studio that </span>
-          <span class="home__tagline-break">support tech startups who </span>
-          <span class="home__tagline-break">drive the future of humanity. </span>
-          <span class="home__tagline-break">We help them grow and stand out in the market.</span>
+          A brand strategy and design studio that supports technology which drives the future of humanity, 
+          helping them grow and stand out in the market.
         </em>
         <em appParallax [ratio]=".15" [direction]="'horizontal'" style="display: inline-block;" class="hidden-md home__tagline-border">
-          <span class="home__tagline-break">We are a brand strategy and design studio that </span>
-          <span class="home__tagline-break">support tech startups who </span>
-          <span class="home__tagline-break">drive the future of humanity. </span>
-          <span class="home__tagline-break">We help them grow and stand out in the market.</span>
+          A brand strategy and design studio that supports technology which drives the future of humanity, 
+          helping them grow and stand out in the market.
         </em>
       </p>
     </div>
