--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,16 +1,16 @@
 <section class="home">
   <div class="container-fluid">
-    <h1 class="sr-only">Brand Strategy & Design studio for tech startups</h1>
+    <h1 class="sr-only">Brand Strategy & Design studio for future-tech companies and startups</h1>
 
 
     <div class="home__tagline-wrapper">
       <p class="home__tagline" data-aos="fade-in" data-aos-duration="1000">
         <em class="hidden-md-up home__tagline-border">
-          A brand strategy and design studio that supports technology which drives the future of humanity, 
+          A brand strategy and design studio that supports technology companies who drive the future of humanity, 
           helping them grow and stand out in the market.
         </em>
         <em appParallax [ratio]=".15" [direction]="'horizontal'" style="display: inline-block;" class="hidden-md home__tagline-border">
-          A brand strategy and design studio that supports technology which drives the future of humanity, 
+          A brand strategy and design studio that supports technology companies who drive the future of humanity, 
           helping them grow and stand out in the market.
         </em>
       </p>
@@ -20,7 +20,7 @@
   <section class="section" *ngIf="this.work" style="background: #93ccf8;">
     <div class="home__work-content container-fluid">
       <header>
-        <h2>Latest work<span class="sr-only"> for tech startups</span></h2>
+        <h2>Latest work<span class="sr-only"> for tech companies and startups</span></h2>
       </header>
   
       <div class="row">
@@ -72,7 +72,7 @@
         <h2>
           <div class="sr-only">Branding and Design </div>
           <span style="display: inline-block;">Services</span>
-          <div class="sr-only"> for tech startups</div>
+          <div class="sr-only"> for tech companies and startups</div>
         </h2>
       </header>
 
