--- a/src/app/global/logo/logo.component.html
+++ b/src/app/global/logo/logo.component.html
@@ -3,8 +3,7 @@
     <span class="logo__moon">.</span><span class="logo__moon">.</span><span class="logo__moon">.</span><span class="logo__moon">.</span>
   </div>
   <div class="logo__text" [ngClass]="{'logo__text--with-slogan': showSlogan}">
-    Jupiter and 
-    <div>the Giraffe</div>
+    Jupiter&nbsp;and <div>the&nbsp;Giraffe</div>
   </div>
   <div class="logo__slogan" *ngIf="showSlogan">
     A Branding Studio Out Of This World
