--- a/src/app/global/signup-popup/signup-popup.component.html
+++ b/src/app/global/signup-popup/signup-popup.component.html
@@ -1,4 +1,4 @@
-<div class="popup" [ngClass]="{'popup--show': showPrompt}">
+<div class="popup" [ngClass]="{'popup--show': showPrompt}" role="alert">
   <button (click)="closePrompt()" class="popup__button">X</button>
   <h2>Free 11 tips to build an awesome tech brand PDF!</h2>
   <a href="#" (click)="toggleDialog($event)" class="btn">Download now!</a>
