add header item and remove popup

--- a/src/app/global/header/header.component.html
+++ b/src/app/global/header/header.component.html
@@ -24,6 +24,10 @@
     <li>
       <a href="https://blog.jupiterandthegiraffe.com">Blog</a>
     </li>
+    
+    <li>
+      <a [routerLink]="['/how-to-build-an-effective-tech-brand']">FREE eBook</a>
+    </li>
   </ul>
 </header>
 
@@ -62,6 +66,10 @@
 
   <li class="header__menu-mobile-item">
     <a href="https://blog.jupiterandthegiraffe.com">Blog</a>
+  </li>
+  
+  <li class="header__menu-mobile-item">
+    <a [routerLink]="['/how-to-build-an-effective-tech-brand']">FREE eBook</a>
   </li>
   
   <li class="header__menu-mobile-item header__menu-mobile-item--number">
