--- a/src/app/pages/how-to-build-an-effective-brand/how-to-build-an-effective-brand.component.html
+++ b/src/app/pages/how-to-build-an-effective-brand/how-to-build-an-effective-brand.component.html
@@ -15,7 +15,7 @@
         </h1>
 
         <h2 class="landing-page__subtitle">
-          Prepare for <em>more customers</em> than you can handle by building an awesome tech brand using our <em>free eBook</em> "How To Launch An Awesome Tech Brand".
+          Prepare for <em>more customers</em> than you can handle using our <em>free eBook</em> "How To Launch An Awesome Tech Brand".
         </h2>
 
         <p>
