--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -112,7 +112,7 @@
 
 <app-friends-component></app-friends-component>
 
-<section class="home" (appDeferLoad)="showMyElement=true">
+<section class="home">
   <div class="container-fluid">
     <section>
       <header>
@@ -131,7 +131,7 @@
   <div *ngIf="developmentMode; else map" class="text-center">Map will not load in dev mode</div>
   <ng-template #map>
       <agm-map [zoom]="2" [latitude]="0" [longitude]="115.1385" [mapDraggable]="true" [scrollwheel]="false" [zoomControl]="false"
-               [streetViewControl]="false" [styles]="styles" *ngIf="showMyElement">
+               [streetViewControl]="false" [styles]="styles">
         <agm-marker [latitude]="-8.6478" [longitude]="115.1385" aria-label="Bali"></agm-marker>
         <agm-marker [latitude]="3.1390" [longitude]="101.6869" [opacity]=".7" aria-label="Kuala Lumpur"></agm-marker>
         <agm-marker [latitude]="-37.8136" [longitude]="144.9631" [opacity]=".7" aria-label="Melbourne"></agm-marker>
