update about page

--- a/src/app/global/email-popup/email-popup.component.html
+++ b/src/app/global/email-popup/email-popup.component.html
@@ -22,8 +22,10 @@
       >
         <div id="mc_embed_signup_scroll">
           <h2 class="h2 email-popup__header">
-            Stay en brand.
+            Newsletter
           </h2>
+
+          <p>Stay up to date with our monthly newsletter</p>
 
           <p *ngIf="error" [innerHTML]="error"></p>
 
