--- a/src/app/global/hero/hero.component.html
+++ b/src/app/global/hero/hero.component.html
@@ -43,7 +43,9 @@
   <div data-aos="fade-in" data-aos-delay="200" data-aos-duration="3000" *ngIf="home">
     <div class="h1">Branding a better future</div>
     
-    <p class="hero__tagline">Beautiful & exceptional design for future-thinking tech startups</p>
+    <p class="hero__tagline">
+      Beautiful & exceptional design for future-thinking technology that takes us to the stars
+    </p>
 
     <div class="row" data-aos="fade-in" data-aos-delay="600" data-aos-duration="3000">
       <div class="col text-right">
