--- a/src/assets/sass/elements/_a.scss
+++ b/src/assets/sass/elements/_a.scss
@@ -52,6 +52,6 @@ p a:link {
   text-decoration: underline;
 
   @include hover-focus {
-    text-decoration: none;
-  }
+    text-decoration: none !important;
+  } 
 }
