--- a/src/assets/sass/objects/_white-bg.scss
+++ b/src/assets/sass/objects/_white-bg.scss
@@ -44,6 +44,10 @@
 
   a:not(.btn) {
     color: $color-oldBrick;
+
+    @include hover-focus {
+      text-decoration: underline;
+    }
   }
 
   &--with-image {
