--- a/src/app/pages/home/friends/friends.component.html
+++ b/src/app/pages/home/friends/friends.component.html
@@ -4,7 +4,7 @@
       <h2 class="text-center">Clients</h2>
     </header>
 
-    <div #slider class="slider" aria-live="polite" *ngIf="quotes.length">
+    <div #slider class="slider" aria-live="polite" *ngIf="quotes">
       <blockquote class="slide" #slide *ngFor="let quote of quotes; let i = index" [ngClass]="{'slide--visible': (i + 1) === currentActiveSlide}">
         <div [innerHTML]="quote.content.rendered"></div>
         <footer [innerHTML]="quote.title.rendered"></footer>
@@ -19,13 +19,14 @@
           *ngIf="friend.type !== 'image'; else noLink;"
           data-aos="fade-up"
           [attr.data-aos-delay]="100 * i"
+          [title]="'View ' + friend.title.rendered + ' case study'"
         >
           <img
             *ngIf="showMyElement && friend.acf.logo"
             class="img-fluid friends__image"
             [src]="friend.acf.logo.sizes.medium"
             srcset="{{friend.acf.logo.sizes.medium}} 1x, {{friend.acf.logo.sizes.large}} 2x"
-            [alt]="'View ' + friend.title.rendered + ' case study'"
+            alt=""
           >
         </a>
         <ng-template #noLink>
