--- a/src/app/pages/who/who.component.scss
+++ b/src/app/pages/who/who.component.scss
@@ -4,6 +4,11 @@
 .who {
   &__image {
     margin-bottom: $space-large;
+    text-align: center;
+
+    @include md {
+      text-align: left;
+    }
   }
 
   &__images {
@@ -22,5 +27,52 @@
     @include hover-focus {
       color: $color-oldBrick;
     }
+  }
+
+  &__process {
+    list-style: none;
+    counter-reset: steps;
+    padding: 0;
+    margin-top: $space-xlrg;
+
+    @include md {
+      display: flex;
+    }
+  }
+
+  &__process-step {
+    padding: 15px;
+    text-align: center;
+    flex: 1 1 100%;
+    counter-increment: steps;
+
+    &::before {
+      content: counter(steps);
+      font-family: "open_sansbold", Arial, sans-serif;
+      color: #f7f7f7;
+      background-color: #93ccf8;
+      padding: 10px;
+      border-radius: 50%;
+      width: 45px;
+      height: 45px;
+      display: block;
+      margin: 0 auto 20px auto;
+    }
+  }
+
+  .bio {
+    margin-top: $space-large;
+  }
+  
+  &__email {
+    margin-bottom: $space-large;
+  }
+
+  &__job-title {
+    color: $color-mine-shaft;
+  }
+
+  &__job-heading {
+    margin-bottom: 0;
   }
 }
